--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "PWA - Vanilla JS",
+    "name": "PWA - To-Do List",
     "short_name": "PWA - VJS",
     "theme_color": "#3f51b5",
     "background_color": "#fff",
