--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "PWA - To-Do List",
-    "short_name": "PWA - VJS",
+    "short_name": "To-Do List",
     "theme_color": "#3f51b5",
     "background_color": "#fff",
     "display": "standalone",
